--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "dependencies": {
     "browser-sync": "^2.27.10",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-purgecss": "^4.1.3"
   }
 }
