--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "browser-sync": "^2.27.10",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-postcss": "^9.0.1",
     "gulp-purgecss": "^4.1.3"
   }
 }
